--- a/src/app/components/user-item/user-item.css
+++ b/src/app/components/user-item/user-item.css
@@ -1,6 +1,6 @@
 .parent {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1.5fr;
+    grid-template-columns: 1fr 1fr 1fr;
     border: 1px solid black;
     border-left: 0px;
 }
@@ -10,7 +10,13 @@
     padding: 5px;
 }
 
-.child img {
-    max-width: 300px;
-    max-height: 300px;
+.image {
+    border: 1px solid black;
+    text-align: center;
+
+}
+
+.image img {
+    width: auto;
+    max-height: 400px;
 }
