gave users their own table

--- a/src/app/components/user-item/user-item.html
+++ b/src/app/components/user-item/user-item.html
@@ -1,6 +1,15 @@
 <div class="parent">
+  <div class="child">Name</div>
+  <div class="child">Email</div>
+  <div class="child">Contact Number</div>
+</div>
+
+<div class="parent">
   <div class="child">{{ user().name }}</div>
   <div class="child">{{ user().email }}</div>
   <div class="child">{{ user().contactNumber }}</div>
-  <div class="child"><img src="{{ user().img }}" alt="pic"></div>
+</div>
+
+<div class="image">
+  <img src="{{ user().img }}" alt="pic">
 </div>
