--- a/src/app/users/users.css
+++ b/src/app/users/users.css
@@ -1,14 +1,4 @@
-.parent {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1.5fr;
-    border: 1px solid black;
-    border-left: 0px;
-    border-bottom: 0px;
+.item-container {
+    margin-top: 50px;
 }
-
-.child {
-    border-left: 1px solid black;
-    padding: 10px;
-}
-
 
