added add user page

--- a/src/app/add-user/add-user.html
+++ b/src/app/add-user/add-user.html
@@ -1,1 +1,11 @@
-<p>add-user works!</p>
+<h2>Add User</h2>
+
+<div>
+    <form>
+        <label>Name: <input type="text" name="name"></label>
+        <label>Email: <input type="text" name="email"></label>
+        <label>Contact Number: <input type="text" name="contact-number"></label>
+
+        <button type="submit">Add User</button>
+    </form>
+</div>
