added upload photo input

--- a/src/app/add-user/add-user.html
+++ b/src/app/add-user/add-user.html
@@ -5,6 +5,7 @@
         <label>Name: <input type="text" name="name"></label>
         <label>Email: <input type="text" name="email"></label>
         <label>Contact Number: <input type="text" name="contact-number"></label>
+        <label>Upload Photo <input type="file" name="user-photo"></label>
 
         <button type="submit">Add User</button>
     </form>
