--- a/src/app/add-user/add-user.css
+++ b/src/app/add-user/add-user.css
@@ -1,4 +1,4 @@
-h3{
+h2{
     text-align: center;
     margin-bottom: 30px;
 }
@@ -16,7 +16,7 @@ input {
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #e6e3e3;
   border-radius: 4px;
   box-sizing: border-box;
 }
@@ -24,7 +24,7 @@ input {
 button[type=submit] {
   background-color: #4CAF50;
   color: white;
-  padding: 15px 40px;
+  padding: 10px 20px;
   margin: 0px auto;
   margin-top: 20px;
   border: none;
