--- a/src/app/users/users.css
+++ b/src/app/users/users.css
@@ -1,4 +1,11 @@
+h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
 .item-container {
+    width: 60%;
+    margin: 0 auto;
     margin-top: 50px;
 }
 
