--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,3 +1,3 @@
 <h2>Home</h2>
 
-<p>This is a website that allows users to post photos.</p>
+<p>This is a website that allows users to post photos alongside information that can be used to contact them.</p>
