fixed image field name

--- a/src/app/add-user/add-user.html
+++ b/src/app/add-user/add-user.html
@@ -5,7 +5,7 @@
         <label>Name: <input type="text" name="name" ngModel></label>
         <label>Email: <input type="text" name="email" ngModel></label>
         <label>Contact Number: <input type="text" name="contactNumber" ngModel></label>
-        <label>Upload Photo <input type="file" name="imageURL" #fileInput></label>
+        <label>Upload Photo <input type="file" name="image" #fileInput></label>
 
         <button type="submit" [disabled]="userForm.invalid">Add User</button>
     </form>
